--- a/keymap-drawer/sofle.yaml
+++ b/keymap-drawer/sofle.yaml
@@ -1,7 +1,7 @@
 layout: {zmk_keyboard: sofle}
 layers:
   BASE:
-  - {t: ESC, s: '`'}
+  - '&td_esc'
   - '1'
   - '2'
   - '3'
@@ -49,7 +49,7 @@ layers:
   - M
   - ','
   - .
-  - {t: /, s: '\\'}
+  - '&td_slash'
   - RSHFT
   - '-'
   - '='
