--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -40,6 +40,11 @@ CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=300
 
+# Disable Bongo Cat to avoid conflict with Luna
+CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
+
 # Modifiers Indicators (Central)
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
