Apply nice_oled following README instructions step by step
Step 1: Enable custom status screen (sofle.conf)
Step 2: Add zmk-nice-oled module to west.yml with ZMK v0.3.0
Step 3: Add nice_oled shield to build.yaml for both left and right

Following official README instructions from:
https://github.com/mctechnology17/zmk-nice-oled/blob/main/README.md

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,11 +1,9 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
-# Enable the Sofle OLED Display
+# Step 1: Enable custom status screen for nice_oled
 CONFIG_ZMK_DISPLAY=y
-
-# Enable I2C for OLED
-CONFIG_I2C=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
