--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,9 +1,19 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
-# Step 1: Enable custom status screen for nice_oled
+# Enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# Enable I2C and SSD1306 for OLED
+CONFIG_I2C=y
+CONFIG_SSD1306=y
+CONFIG_ZMK_EXT_POWER=y
+
+# Enable nice!oled
+CONFIG_NICE_OLED_ON=y
+CONFIG_NICE_EPAPER_ON=n
+CONFIG_NICE_CUSTOM_ON=n
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
@@ -18,3 +28,62 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# ==============================================
+# NICE!OLED DISPLAY CONFIGURATION
+# ==============================================
+
+# Display thread configuration
+# Use dedicated work queue to avoid blocking key scanning
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2560
+# Priority 5 = lower priority than key scanning (prevents input lag)
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_PRIORITY=5
+
+# Memory pool for LVGL
+CONFIG_LV_Z_MEM_POOL_SIZE=8192
+CONFIG_LV_Z_VDB_SIZE=64
+CONFIG_LV_DPI_DEF=148
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_COLOR_DEPTH_1=y
+
+# Do not blank display on idle
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+
+# ==============================================
+# NICE!OLED WIDGET CONFIGURATION
+# ==============================================
+
+# WPM Widget (Central) - Words Per Minute
+CONFIG_NICE_OLED_WIDGET_WPM=y
+CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=300
+
+# Modifiers Indicators (Central)
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=y
+
+# HID Indicators (Central) - Caps Lock, etc.
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=y
+CONFIG_ZMK_HID_INDICATORS=y
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=y
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=y
+
+# Layer Widget (Central)
+CONFIG_NICE_OLED_WIDGET_LAYER=y
+
+# Peripheral Animations
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=500
+
+# Output background on central and peripheral
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
+
+# Invert display colors (for dark mode)
+CONFIG_NICE_OLED_WIDGET_INVERTED=n
