--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -17,7 +17,7 @@ CONFIG_NICE_CUSTOM_ON=n
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11_TRIGGER_OWN_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
 CONFIG_ZMK_RGB_UNDERGLOW=n
@@ -28,6 +28,18 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# ==============================================
+# POWER MANAGEMENT & BATTERY OPTIMIZATION
+# ==============================================
+
+# Idle timeout: blank OLED after 15 minutes (900,000ms)
+CONFIG_ZMK_IDLE_TIMEOUT=900000
+
+# Enable deep sleep (disconnects BLE, ~20µA power draw)
+CONFIG_ZMK_SLEEP=y
+# Deep sleep after 1 hour of inactivity (3,600,000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # ==============================================
 # NICE!OLED DISPLAY CONFIGURATION
@@ -47,8 +59,12 @@ CONFIG_LV_DPI_DEF=148
 CONFIG_LV_Z_BITS_PER_PIXEL=1
 CONFIG_LV_COLOR_DEPTH_1=y
 
-# Do not blank display on idle
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+# Blank display when keyboard is idle (saves ~15-20mA OLED draw)
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+
+# Show sleep art before blanking (visual feedback that keyboard is sleeping)
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=y
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 
 # ==============================================
 # NICE!OLED WIDGET CONFIGURATION
@@ -59,7 +75,7 @@ CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=300
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=500
 
 # Modifiers Indicators (Central)
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
@@ -80,7 +96,7 @@ CONFIG_NICE_OLED_WIDGET_LAYER=y
 # Peripheral Animations
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=500
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
