--- a/build.yaml
+++ b/build.yaml
@@ -16,6 +16,6 @@ include:
   - board: nice_nano_v2
     shield: sofle_left nice_oled
   - board: nice_nano_v2
-    shield: sofle_right nice_oled_custom
+    shield: sofle_right nice_oled
   - board: nice_nano_v2
     shield: settings_reset
