config: reduce deep sleep timeout to 30 minutes
Change CONFIG_ZMK_IDLE_SLEEP_TIMEOUT from 3600000ms (1 hour) to
1800000ms (30 minutes) for faster power saving while maintaining
reasonable active time.

OLED idle timeout remains at 15 minutes (900000ms) as configured.

Tested: Firmware builds successfully with new timeout values.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -38,8 +38,8 @@ CONFIG_ZMK_IDLE_TIMEOUT=900000
 
 # Enable deep sleep (disconnects BLE, ~20µA power draw)
 CONFIG_ZMK_SLEEP=y
-# Deep sleep after 1 hour of inactivity (3,600,000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# Deep sleep after 30 minutes of inactivity (1,800,000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # ==============================================
 # NICE!OLED DISPLAY CONFIGURATION
