--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -17,7 +17,7 @@ CONFIG_NICE_CUSTOM_ON=n
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11_TRIGGER_OWN_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
 CONFIG_ZMK_RGB_UNDERGLOW=n
@@ -29,16 +29,53 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-# ============================================
+# ==============================================
+# POWER MANAGEMENT & BATTERY OPTIMIZATION
+# ==============================================
+
+# Idle timeout: blank OLED after 15 minutes (900,000ms)
+CONFIG_ZMK_IDLE_TIMEOUT=900000
+
+# Enable deep sleep (disconnects BLE, ~20µA power draw)
+CONFIG_ZMK_SLEEP=y
+# Deep sleep after 30 minutes of inactivity (1,800,000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# ==============================================
+# NICE!OLED DISPLAY CONFIGURATION
+# ==============================================
+
+# Display thread configuration
+# Use dedicated work queue to avoid blocking key scanning
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2560
+# Priority 5 = lower priority than key scanning (prevents input lag)
+CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_PRIORITY=5
+
+# Memory pool for LVGL
+CONFIG_LV_Z_MEM_POOL_SIZE=8192
+CONFIG_LV_Z_VDB_SIZE=64
+CONFIG_LV_DPI_DEF=148
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_COLOR_DEPTH_1=y
+
+# Blank display when keyboard is idle (saves ~15-20mA OLED draw)
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
+
+# Show sleep art before blanking (visual feedback that keyboard is sleeping)
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=y
+CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
+
+# ==============================================
 # NICE!OLED WIDGET CONFIGURATION
-# ============================================
+# ==============================================
 
 # WPM Widget (Central) - Words Per Minute
 CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=300
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=500
 
 # Disable Bongo Cat to avoid conflict with Luna
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
@@ -61,46 +98,13 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=y
 # Layer Widget (Central)
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
-# Battery Widget (Central)
-# Shows peripheral battery on central screen
-# CONFIG_NICE_OLED_WIDGET_CENTRAL_SHOW_BATTERY_PERIPHERAL_ALL=y
-
 # Peripheral Animations
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=500
-
-# Optional: Other peripheral animations (choose one)
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=y
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_POKEMON=y
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=y
-
-# Static image on peripheral (if no animation)
-# CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL=y
-# CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL_VIM=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
 
 # Invert display colors (for dark mode)
 CONFIG_NICE_OLED_WIDGET_INVERTED=n
-
-# Display thread configuration
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2560
-CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_PRIORITY=5
-
-# Memory pool for LVGL
-CONFIG_LV_Z_MEM_POOL_SIZE=8192
-CONFIG_LV_Z_VDB_SIZE=64
-CONFIG_LV_DPI_DEF=148
-CONFIG_LV_Z_BITS_PER_PIXEL=1
-CONFIG_LV_COLOR_DEPTH_1=y
-
-# Do not blank display on idle
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-
-# Sleep art (optional)
-# CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=n
-# CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=n
