--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -70,38 +70,48 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # NICE!OLED WIDGET CONFIGURATION
 # ==============================================
 
+# ==============================================
+# OPTIMIZED WIDGET LAYOUT - Single Luna Only
+# ==============================================
+
 # WPM Widget (Central) - Words Per Minute
+# Layout: Number (top) + Speedometer (middle) + Luna (bottom)
 CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=500
+# Slow animation for better FPS (1000ms = 1 frame per second)
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=1000
 
-# Disable Bongo Cat to avoid conflict with Luna
+# Disable Bongo Cat completely
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
-# Modifiers Indicators (Central)
+# Modifiers Indicators (Central) - Minimal style
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
+# Only symbol, no box to save space
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=y
 
-# HID Indicators (Central) - Caps Lock, etc.
+# HID Indicators (Central) - NO LUNA HERE (avoid overlap)
+# Luna reacts to capslock in WPM widget already
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=y
 CONFIG_ZMK_HID_INDICATORS=y
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=y
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=y
+# TẮT Luna trong HID để tránh chồng lên WPM Luna
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 
 # Layer Widget (Central)
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
-# Peripheral Animations
+# Peripheral Animations - Cat only, slower for FPS
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
+# 1500ms = slower animation, better FPS
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=1500
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
