config: add WPM Graph to right side (peripheral)
Right side (Peripheral):
- Replace Cat animation with WPM Graph
- Enable CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM
- Enable CONFIG_NICE_OLED_WIDGET_WPM_GRAPH with fixed range 0-100
- Disable Cat animation (CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n)

Left side (Central) - Keep existing:
- BT + Battery icons
- WPM with Luna + Speedometer
- Modifiers (symbols only)
- Layer indicator

Add position configs to prevent widget overlap:
- Luna: x=65, y=0
- Modifiers: x=0, y=100
- Battery: x=0, y=50
- BT: x=4, y=32

Layout (Left side - 128x32):
[BT Icon] [Battery] [WPM Number]
[WPM Speedometer]     [Luna]
[Modifiers ■▲⌘◆]  [Layer]

Right side: WPM Graph only

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -107,11 +107,41 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 # Layer Widget (Central)
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
-# Peripheral Animations - Cat only, slower for FPS
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-# 1500ms = slower animation, better FPS
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=1500
+# ==============================================
+# PERIPHERAL SIDE (Right) - WPM Graph
+# ==============================================
+
+# Thay Cat animation bằng WPM Graph
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_FIXED_RANGE=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_FIXED_RANGE_MAX=100
+
+# TẮT Cat animation để dùng WPM Graph
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
+
+# ==============================================
+# WIDGET POSITION CUSTOMIZATION (128x32 OLED)
+# ==============================================
+
+# Vị trí các widget trên màn hình (tùy chỉnh để không bị chồng)
+# WPM Luna position (tránh chồng lên speedometer)
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=65
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=0
+
+# Modifiers position - đặt ở dưới cùng
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=100
+
+# Battery position - góc trái
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=50
+
+# Bluetooth/USB position - góc trên
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=4
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=32
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=34
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
