config: minimal OLED layout - Luna + Modifiers + Layer only
Fix Luna overlapping with WPM speedometer by removing WPM widgets entirely.

Left side (Central) - Minimal layout:
- Luna (center, reacts to typing speed & capslock)
- Modifiers (bottom-left, symbols only)
- Layer (bottom-right)
- Bluetooth/USB icons (top, for connection status)

Removed to prevent overlap:
- WPM Number (CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n)
- WPM Speedometer (CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n)
- Battery widget (removed config)

Right side (Peripheral):
- WPM Graph (replaces Cat animation)

Widget positions optimized:
- Luna: x=18, y=10 (center)
- Modifiers: x=0, y=120 (bottom-left)
- Layer: x=35, y=140 (bottom-right)
- BT/USB: x=0-4, y=0 (top)

Fixes #5 - Luna overlap issue

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -67,21 +67,24 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=y
 CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 
 # ==============================================
-# NICE!OLED WIDGET CONFIGURATION
+# NICE!OLED WIDGET CONFIGURATION - MINIMAL LAYOUT
 # ==============================================
+# Layout: Luna (center) + Modifiers (bottom-left) + Layer (bottom-right)
+# Đã xóa: WPM Number, WPM Speedometer, Battery widget để tránh chồng chéo
+# Giữ lại: Bluetooth icon để xem trạng thái kết nối
 
 # ==============================================
-# OPTIMIZED WIDGET LAYOUT - Single Luna Only
+# MINIMAL LAYOUT: Luna + Modifiers + Layer ONLY
 # ==============================================
 
-# WPM Widget (Central) - Words Per Minute
-# Layout: Number (top) + Speedometer (middle) + Luna (bottom)
+# WPM Widget (bật để Luna hoạt động, nhưng tắt Number và Speedometer)
 CONFIG_NICE_OLED_WIDGET_WPM=y
-CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
-CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
+# TẮT WPM Number và Speedometer - chỉ giữ Luna
+CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-# Slow animation for better FPS (1000ms = 1 frame per second)
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=1000
+# Animation chậm cho FPS tốt hơn
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=1200
 
 # Disable Bongo Cat completely
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
@@ -121,27 +124,26 @@ CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_FIXED_RANGE_MAX=100
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
 
 # ==============================================
-# WIDGET POSITION CUSTOMIZATION (128x32 OLED)
+# MINIMAL WIDGET POSITIONS
 # ==============================================
 
-# Vị trí các widget trên màn hình (tùy chỉnh để không bị chồng)
-# WPM Luna position (tránh chồng lên speedometer)
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=65
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=0
+# Luna ở giữa màn hình (không bị chồng vì đã xóa Speedometer)
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=18
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=10
 
-# Modifiers position - đặt ở dưới cùng
+# Modifiers - dưới cùng bên trái
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=100
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=120
 
-# Battery position - góc trái
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=50
+# Layer - dưới cùng bên phải
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=35
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=140
 
-# Bluetooth/USB position - góc trên
+# Bluetooth/USB - góc trên (hữu ích để xem trạng thái kết nối)
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=4
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=32
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=0
 CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=34
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=0
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
