config: optimize 32x128 vertical layout - fix overlapping widgets
Left Side (Central) - Keep: BT, Battery, Luna, Modifiers, Layer
Layout (Y coords, 32x128):
  Y=0-16:  BT icon + Battery percentage
  Y=25-57: Luna (centered, 24x32)
  Y=65-79: Modifiers (horizontal symbols)
  Y=85-95: Layer name

Right Side (Peripheral) - Keep: Cat + WPM Speedometer
Layout (Y coords, 32x128):
  Y=0-50:  WPM Speedometer (50x50)
  Y=60-92: Cat animation
  (No BT/Battery to save space)

Widget positions optimized to prevent overlapping on vertical 32x128 OLED:
- Luna: x=4, y=25 (center)
- Modifiers: x=2, y=65 (horizontal layout)
- Layer: x=2, y=85 (bottom)
- BT/Battery: x=0-16, y=2 (top row)

Fixes #6 - Widget overlapping on 32x128 vertical display

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -67,83 +67,89 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_IDLE=y
 CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 
 # ==============================================
-# NICE!OLED WIDGET CONFIGURATION - MINIMAL LAYOUT
+# NICE!OLED WIDGET CONFIGURATION - 32x128 VERTICAL
 # ==============================================
-# Layout: Luna (center) + Modifiers (bottom-left) + Layer (bottom-right)
-# Đã xóa: WPM Number, WPM Speedometer, Battery widget để tránh chồng chéo
-# Giữ lại: Bluetooth icon để xem trạng thái kết nối
+# LEFT SIDE (Central): BT+Battery(0-16) -> Luna(25-57) -> Modifiers(65-79) -> Layer(85-95)
+# RIGHT SIDE (Peripheral): Speedometer(0-50) -> Cat(60-92)
+# Screen: 32x128 pixels (width x height)
 
 # ==============================================
-# MINIMAL LAYOUT: Luna + Modifiers + Layer ONLY
+# CENTRAL SIDE (Left) - Vertical 32x128 layout
 # ==============================================
+# Layout (Y coords): BT+Battery(0-16) -> Luna(25-57) -> Modifiers(65-79) -> Layer(85-95)
 
-# WPM Widget (bật để Luna hoạt động, nhưng tắt Number và Speedometer)
+# WPM Widget - chỉ giữ Luna cho bên trái
 CONFIG_NICE_OLED_WIDGET_WPM=y
-# TẮT WPM Number và Speedometer - chỉ giữ Luna
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-# Animation chậm cho FPS tốt hơn
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=1200
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=1000
 
-# Disable Bongo Cat completely
+# Disable Bongo Cat
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
-# Modifiers Indicators (Central) - Minimal style
+# Modifiers - Compact horizontal layout
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
-# Only symbol, no box to save space
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_HOR=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=y
 
-# HID Indicators (Central) - NO LUNA HERE (avoid overlap)
-# Luna reacts to capslock in WPM widget already
+# HID Indicators - chỉ cho Capslock, không Luna
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=y
 CONFIG_ZMK_HID_INDICATORS=y
-# TẮT Luna trong HID để tránh chồng lên WPM Luna
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 
-# Layer Widget (Central)
+# Layer Widget
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - WPM Graph
+# PERIPHERAL SIDE (Right) - Speedometer + Cat
+# ==============================================
+# Layout (Y coords): Speedometer(0-50) -> Cat(60-92)
+
+# Bật WPM Speedometer cho bên phải
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER_PERIPHERAL=y
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER_PERIPHERAL_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER_PERIPHERAL_CUSTOM_Y=0
+
+# Giữ Cat animation cho bên phải
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=1200
+
+# TẮT các widget không cần trên bên phải
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=n
+
+# ==============================================
+# WIDGET POSITIONS - Optimized for 32x128
 # ==============================================
 
-# Thay Cat animation bằng WPM Graph
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_FIXED_RANGE=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_FIXED_RANGE_MAX=100
-
-# TẮT Cat animation để dùng WPM Graph
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
-
-# ==============================================
-# MINIMAL WIDGET POSITIONS
-# ==============================================
-
-# Luna ở giữa màn hình (không bị chồng vì đã xóa Speedometer)
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=18
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=10
-
-# Modifiers - dưới cùng bên trái
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=120
-
-# Layer - dưới cùng bên phải
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=35
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=140
-
-# Bluetooth/USB - góc trên (hữu ích để xem trạng thái kết nối)
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=4
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=0
+# LEFT SIDE (Central):
+# Row 1 (Y=0-16): BT icon (left) + Battery (right)
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=2
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=2
 CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=0
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=2
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=16
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=2
+
+# Row 2 (Y=25-57): Luna centered (24x32)
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=4
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=25
+
+# Row 3 (Y=65-79): Modifiers horizontal (4 icons x 7px)
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=2
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=65
+
+# Row 4 (Y=85-95): Layer name
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=2
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=85
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
