feat: Enable WPM speedometer, switch modifier indicators to vertical layout, adjust animation speeds, and optimize OLED widget positions.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -78,25 +78,28 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # Layout (Y coords): BT+Battery(0-16) -> Luna(25-57) -> Modifiers(65-79) -> Layer(85-95)
 
-# WPM Widget - chỉ giữ Luna cho bên trái
+# WPM Widget - Bật cho cả hai bên
 CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
-CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
+# Bật Speedometer cho cả hai bên
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=200
+# Giảm tốc độ animation Luna (chậm hơn)
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
 
 # Disable Bongo Cat
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
-# Modifiers - Compact horizontal layout
+# Modifiers - VERTICAL layout cho 4 icon đều hiển thị
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_HOR=y
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=y
+# Đổi từ HOR sang VER để hiển thị 4 icon dọc
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
 
 # HID Indicators - chỉ cho Capslock, không Luna
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=y
@@ -112,10 +115,11 @@ CONFIG_NICE_OLED_WIDGET_LAYER=y
 # ==============================================
 # Layout (Y coords): Speedometer(0-50) -> Cat(60-92)
 
-# Giữ Cat animation cho bên phải
+# Giữ Cat animation cho bên phải - GIẢM TỐC ĐỘ (chậm hơn)
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=200
+# Tăng thờigian animation để chạy chậm hơn (960ms = chậm)
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 
 # TẮT các widget không cần trên bên phải
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
@@ -125,26 +129,26 @@ CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=n
 # WIDGET POSITIONS - Optimized for 32x128
 # ==============================================
 
-# LEFT SIDE (Central):
-# Row 1 (Y=0-16): BT icon (left) + Battery (right)
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=2
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=2
+# LEFT SIDE (Central) - Positions optimized:
+# Row 1 (Y=0-16): BT icon + Battery (cùng hàng nhưng BT trái, Battery phải)
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=0
 CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=2
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=16
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=2
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=0
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=10
 
-# Row 2 (Y=25-57): Luna centered (24x32)
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=4
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=25
+# Row 2 (Y=20-52): Luna dịch sang trái để không bị tràn (X=0 thay vì X=4)
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=20
 
-# Row 3 (Y=65-79): Modifiers horizontal (4 icons x 7px)
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=2
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=65
+# Row 3 (Y=55-110): Modifiers VERTICAL (4 icons dọc)
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=55
 
-# Row 4 (Y=85-95): Layer name
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=2
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=85
+# Row 4 (Y=112-122): Layer name
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=112
 
 # Output background on central and peripheral
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
