enable wpm graph and modify height

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -120,10 +120,16 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
 # Tăng thờigian animation để chạy chậm hơn (960ms = chậm)
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
+# Bật WPM Graph
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_ANIMATION_MS=960
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_Y=0
 
 # TẮT các widget không cần trên bên phải
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=n
 
 # ==============================================
 # WIDGET POSITIONS - Optimized for 32x128
