--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -69,95 +69,104 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # NICE!OLED WIDGET CONFIGURATION - 32x128 VERTICAL
 # ==============================================
-# LEFT SIDE (Central): BT+Battery(0-16) -> Luna(25-57) -> Modifiers(65-79) -> Layer(85-95)
-# RIGHT SIDE (Peripheral): Speedometer(0-50) -> Cat(60-92)
+# LEFT SIDE (Central): BT+Battery(0-18) -> Luna(20-52) -> Modifiers(55-87) -> Layer(90-128)
+# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92) -> Status(95-128)
 # Screen: 32x128 pixels (width x height)
 
 # ==============================================
 # CENTRAL SIDE (Left) - Vertical 32x128 layout
 # ==============================================
-# Layout (Y coords): BT+Battery(0-16) -> Luna(25-57) -> Modifiers(65-79) -> Layer(85-95)
 
-# WPM Widget - Bật cho cả hai bên
-CONFIG_NICE_OLED_WIDGET_WPM=y
+# WPM Widget - DISABLED on central (Luna is primary animation)
+CONFIG_NICE_OLED_WIDGET_WPM=n
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
-# Bật Speedometer cho cả hai bên
-CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
+
+# Luna Animation - PRIMARY on central
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-# Giảm tốc độ animation Luna (chậm hơn)
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
 
-# Disable Bongo Cat
+# Disable Bongo Cat on central
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
-# Modifiers - VERTICAL layout cho 4 icon đều hiển thị
+# Battery Widget - ENABLED with explicit position
+CONFIG_NICE_OLED_WIDGET_BATTERY=y
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=0
+
+# Output (BT/USB) Widget - ENABLED with explicit position
+CONFIG_NICE_OLED_WIDGET_OUTPUT=y
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=9
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=9
+
+# Modifiers - VERTICAL layout for 4 icons
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
-# Đổi từ HOR sang VER để hiển thị 4 icon dọc
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
 
-# HID Indicators - chỉ cho Capslock, không Luna
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=y
-CONFIG_ZMK_HID_INDICATORS=y
+# HID Indicators - DISABLED
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_ZMK_HID_INDICATORS=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 
-# Layer Widget
+# Layer Widget - ENABLED
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - Speedometer + Cat
+# PERIPHERAL SIDE (Right) - WPM Graph + Cat
 # ==============================================
-# Layout (Y coords): Speedometer(0-50) -> Cat(60-92)
 
-# Giữ Cat animation cho bên phải - GIẢM TỐC ĐỘ (chậm hơn)
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
-# Tăng thờigian animation để chạy chậm hơn (960ms = chậm)
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
-# Bật WPM Graph
+# WPM Graph on peripheral
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_ANIMATION_MS=960
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_X=0
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_Y=0
 
-# TẮT các widget không cần trên bên phải
+# Cat animation on peripheral
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
+
+# Disable WPM number on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
 # ==============================================
-# WIDGET POSITIONS - Optimized for 32x128
+# WIDGET POSITIONS - FIXED for 32x128
 # ==============================================
 
-# LEFT SIDE (Central) - Positions optimized:
-# Row 1 (Y=0-16): BT icon + Battery (cùng hàng nhưng BT trái, Battery phải)
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=0
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=10
+# LEFT SIDE (Central) Layout:
+# Y=0-8:   Battery indicator (height ~8px)
+# Y=9-18:  BT/USB status (height ~9px)
+# Y=20-52: Luna animation (height ~32px)
+# Y=55-87: Modifiers vertical (4 icons x 8px = 32px)
+# Y=90-128: Layer name (remaining space)
 
-# Row 2 (Y=20-52): Luna dịch sang trái để không bị tràn (X=0 thay vì X=4)
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=20
 
-# Row 3 (Y=55-110): Modifiers VERTICAL (4 icons dọc)
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=55
 
-# Row 4 (Y=112-122): Layer name
 CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=112
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=90
 
-# Output background on central and peripheral
+# RIGHT SIDE (Peripheral) Layout:
+# Y=0-48:  WPM Graph (height ~48px)
+# Y=50-92: Cat animation (height ~42px)
+# Remaining space can be used for additional status if needed
+
+# Output background - DISABLED for cleaner look
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
 
-# Invert display colors (for dark mode)
+# Invert display colors - DISABLED (white on black)
 CONFIG_NICE_OLED_WIDGET_INVERTED=n
