refactor: simplify OLED widget positioning by removing explicit coordinates for auto-rendered elements and updating dependent widget positions.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -91,24 +91,16 @@ CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
-# Battery Widget - ENABLED with explicit position
-CONFIG_NICE_OLED_WIDGET_BATTERY=y
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_BATTERY_CUSTOM_Y=0
-
-# Output (BT/USB) Widget - ENABLED with explicit position
-CONFIG_NICE_OLED_WIDGET_OUTPUT=y
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_BT_CUSTOM_Y=9
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_OUTPUT_USB_CUSTOM_Y=9
+# Battery/Output widgets are always enabled - position them via custom coords below
 
 # Modifiers - VERTICAL layout for 4 icons
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
+# Use symbol display with vertical layout
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_VER=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_BOX=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_HOR=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
 
 # HID Indicators - DISABLED
@@ -126,9 +118,6 @@ CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # WPM Graph on peripheral
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_ANIMATION_MS=960
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_Y=0
 
 # Cat animation on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
@@ -145,25 +134,26 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 # ==============================================
 
 # LEFT SIDE (Central) Layout:
-# Y=0-8:   Battery indicator (height ~8px)
-# Y=9-18:  BT/USB status (height ~9px)
-# Y=20-52: Luna animation (height ~32px)
-# Y=55-87: Modifiers vertical (4 icons x 8px = 32px)
-# Y=90-128: Layer name (remaining space)
+# Battery/BT/USB widgets are always enabled and render at top automatically
+# We position other widgets below them to avoid overlap
+# Y=0-18:  Battery + BT/USB status (auto-rendered, ~18px total)
+# Y=30-62: Luna animation (positioned to clear status area)
+# Y=70-102: Modifiers vertical (4 icons, positioned below Luna)
+# Y=105-128: Layer name (positioned at bottom)
 
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=20
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=30
 
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=55
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
 
 CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=90
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=105
 
 # RIGHT SIDE (Peripheral) Layout:
-# Y=0-48:  WPM Graph (height ~48px)
-# Y=50-92: Cat animation (height ~42px)
-# Remaining space can be used for additional status if needed
+# WPM Graph renders at top automatically
+# Y=0-48:  WPM Graph (auto-positioned at top)
+# Y=50-92: Cat animation (positioned below graph)
 
 # Output background - DISABLED for cleaner look
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
