feat: Adjust OLED widget positions on central display and disable status widgets on peripheral display.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -69,8 +69,8 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # NICE!OLED WIDGET CONFIGURATION - 32x128 VERTICAL
 # ==============================================
-# LEFT SIDE (Central): BT+Battery(0-18) -> Luna(20-52) -> Modifiers(55-87) -> Layer(90-128)
-# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92) -> Status(95-128)
+# LEFT SIDE (Central): Status(0-20) -> Luna(40-72) -> Modifiers(80-112) -> Layer(115-128)
+# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92) - NO STATUS WIDGETS
 # Screen: 32x128 pixels (width x height)
 
 # ==============================================
@@ -90,8 +90,6 @@ CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
-
-# Battery/Output widgets are always enabled - position them via custom coords below
 
 # Modifiers - VERTICAL layout for 4 icons
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
@@ -113,13 +111,19 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - WPM Graph + Cat
+# PERIPHERAL SIDE (Right) - WPM Graph + Cat ONLY
 # ==============================================
 
-# WPM Graph on peripheral
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+# Hide status widgets (battery/BT) on peripheral side
+CONFIG_NICE_OLED_WIDGET_OUTPUT_PERIPHERAL=n
+CONFIG_NICE_OLED_WIDGET_BATTERY_PERIPHERAL=n
 
-# Cat animation on peripheral
+# WPM Graph on peripheral - positioned at top
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_Y=0
+
+# Cat animation on peripheral - positioned below graph
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
@@ -130,30 +134,31 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
 # ==============================================
-# WIDGET POSITIONS - FIXED for 32x128
+# WIDGET POSITIONS - OPTIMIZED for 32x128
 # ==============================================
 
-# LEFT SIDE (Central) Layout:
-# Battery/BT/USB widgets are always enabled and render at top automatically
-# We position other widgets below them to avoid overlap
-# Y=0-18:  Battery + BT/USB status (auto-rendered, ~18px total)
-# Y=30-62: Luna animation (positioned to clear status area)
-# Y=70-102: Modifiers vertical (4 icons, positioned below Luna)
-# Y=105-128: Layer name (positioned at bottom)
+# LEFT SIDE (Central) Layout - ADJUSTED FOR BETTER SPACING:
+# Y=0-20:   Status widgets (BT/Battery - auto-rendered, cannot reposition)
+# Y=40-72:  Luna animation (moved DOWN to avoid status overlap)
+# Y=80-112: Modifiers vertical (moved DOWN to avoid Luna overlap)
+# Y=115-128: Layer name (at bottom)
 
+# Luna positioned lower to clear status area completely
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=30
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=40
 
+# Modifiers positioned to clear Luna
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=80
 
+# Layer at the very bottom
 CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=105
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=115
 
-# RIGHT SIDE (Peripheral) Layout:
-# WPM Graph renders at top automatically
-# Y=0-48:  WPM Graph (auto-positioned at top)
+# RIGHT SIDE (Peripheral) Layout - NO STATUS WIDGETS:
+# Y=0-48:  WPM Graph (full width, positioned at top)
 # Y=50-92: Cat animation (positioned below graph)
+# Result: Clean display with only graph and cat, no battery/BT clutter
 
 # Output background - DISABLED for cleaner look
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
