feat: disable OLED status and battery widgets on both sides and adjust widget positions to maximize animation space.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -69,9 +69,20 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # NICE!OLED WIDGET CONFIGURATION - 32x128 VERTICAL
 # ==============================================
-# LEFT SIDE (Central): Status(0-20) -> Luna(40-72) -> Modifiers(80-112) -> Layer(115-128)
-# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92) - NO STATUS WIDGETS
+# STATUS WIDGETS DISABLED - Maximum space for animations
+#
+# LEFT SIDE (Central): Luna(0-32) -> Modifiers(40-72) -> Layer(80-128)
+# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92)
 # Screen: 32x128 pixels (width x height)
+
+# ==============================================
+# DISABLE STATUS WIDGETS ON BOTH SIDES
+# ==============================================
+# This gives maximum space for Luna, Cat, and other widgets
+# Trade-off: No battery/BT indicators visible
+
+CONFIG_NICE_OLED_WIDGET_OUTPUT=n
+CONFIG_NICE_OLED_WIDGET_BATTERY=n
 
 # ==============================================
 # CENTRAL SIDE (Left) - Vertical 32x128 layout
@@ -82,7 +93,7 @@ CONFIG_NICE_OLED_WIDGET_WPM=n
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 
-# Luna Animation - PRIMARY on central
+# Luna Animation - PRIMARY on central, positioned at TOP
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
 
@@ -113,15 +124,10 @@ CONFIG_NICE_OLED_WIDGET_LAYER=y
 # ==============================================
 # PERIPHERAL SIDE (Right) - WPM Graph + Cat ONLY
 # ==============================================
+# Clean layout with maximum space for animations
 
-# Hide status widgets (battery/BT) on peripheral side
-CONFIG_NICE_OLED_WIDGET_OUTPUT_PERIPHERAL=n
-CONFIG_NICE_OLED_WIDGET_BATTERY_PERIPHERAL=n
-
-# WPM Graph on peripheral - positioned at top
+# WPM Graph on peripheral - positioned at TOP
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH_CUSTOM_Y=0
 
 # Cat animation on peripheral - positioned below graph
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
@@ -134,31 +140,30 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
 # ==============================================
-# WIDGET POSITIONS - OPTIMIZED for 32x128
+# WIDGET POSITIONS - MAXIMUM SPACE (NO STATUS)
 # ==============================================
 
-# LEFT SIDE (Central) Layout - ADJUSTED FOR BETTER SPACING:
-# Y=0-20:   Status widgets (BT/Battery - auto-rendered, cannot reposition)
-# Y=40-72:  Luna animation (moved DOWN to avoid status overlap)
-# Y=80-112: Modifiers vertical (moved DOWN to avoid Luna overlap)
-# Y=115-128: Layer name (at bottom)
+# LEFT SIDE (Central) Layout - NO STATUS WIDGETS:
+# Y=0-32:  Luna animation (starts at top, full space)
+# Y=40-72: Modifiers vertical (4 icons below Luna)
+# Y=80-128: Layer name (plenty of space at bottom)
 
-# Luna positioned lower to clear status area completely
+# Luna positioned at top since no status widgets
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=40
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=0
 
-# Modifiers positioned to clear Luna
+# Modifiers positioned below Luna
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=80
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=40
 
-# Layer at the very bottom
+# Layer with generous space
 CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=115
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=80
 
 # RIGHT SIDE (Peripheral) Layout - NO STATUS WIDGETS:
-# Y=0-48:  WPM Graph (full width, positioned at top)
+# Y=0-48:  WPM Graph (starts at top, full width)
 # Y=50-92: Cat animation (positioned below graph)
-# Result: Clean display with only graph and cat, no battery/BT clutter
+# Clean display with maximum animation space!
 
 # Output background - DISABLED for cleaner look
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
