Adjust OLED widget layout to accommodate always-on status widgets and remove the WPM graph from the peripheral display.

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -69,31 +69,28 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # NICE!OLED WIDGET CONFIGURATION - 32x128 VERTICAL
 # ==============================================
-# STATUS WIDGETS DISABLED - Maximum space for animations
+# IMPORTANT DISCOVERY: Most widgets are CENTRAL-ONLY!
+# - Luna, Modifiers, Layer, WPM Graph → Only work on LEFT (Central) side
+# - Cat animation → Only widget that works on RIGHT (Peripheral) side
+# - Status widgets → Always visible on BOTH sides, cannot be disabled
 #
-# LEFT SIDE (Central): Luna(0-32) -> Modifiers(40-72) -> Layer(80-128)
-# RIGHT SIDE (Peripheral): WPM Graph(0-48) -> Cat(50-92)
+# FINAL LAYOUT:
+# LEFT (Central): Status(0-18) -> Luna(30-62) -> Modifiers(70-102) -> Layer(110-128)
+# RIGHT (Peripheral): Status(0-18) -> Cat(30-72)
 # Screen: 32x128 pixels (width x height)
-
-# ==============================================
-# DISABLE STATUS WIDGETS ON BOTH SIDES
-# ==============================================
-# This gives maximum space for Luna, Cat, and other widgets
-# Trade-off: No battery/BT indicators visible
-
-CONFIG_NICE_OLED_WIDGET_OUTPUT=n
-CONFIG_NICE_OLED_WIDGET_BATTERY=n
 
 # ==============================================
 # CENTRAL SIDE (Left) - Vertical 32x128 layout
 # ==============================================
 
-# WPM Widget - DISABLED on central (Luna is primary animation)
+# WPM Widget - DISABLED on central to prioritize Luna
+# (WPM Graph would work here but takes too much space)
 CONFIG_NICE_OLED_WIDGET_WPM=n
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=n
 
-# Luna Animation - PRIMARY on central, positioned at TOP
+# Luna Animation - PRIMARY on central
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
 
@@ -122,48 +119,47 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - WPM Graph + Cat ONLY
+# PERIPHERAL SIDE (Right) - Cat animation ONLY
 # ==============================================
-# Clean layout with maximum space for animations
+# Only Cat animation works on peripheral
+# Status widgets will appear automatically at top
 
-# WPM Graph on peripheral - positioned at TOP
-CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
-
-# Cat animation on peripheral - positioned below graph
+# Cat animation on peripheral - positioned below status widgets
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=50
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=30
 
 # Disable WPM number on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
 # ==============================================
-# WIDGET POSITIONS - MAXIMUM SPACE (NO STATUS)
+# WIDGET POSITIONS - OPTIMIZED for 32x128
 # ==============================================
 
-# LEFT SIDE (Central) Layout - NO STATUS WIDGETS:
-# Y=0-32:  Luna animation (starts at top, full space)
-# Y=40-72: Modifiers vertical (4 icons below Luna)
-# Y=80-128: Layer name (plenty of space at bottom)
+# LEFT SIDE (Central) Layout:
+# Y=0-18:   Status widgets (BT/Battery - auto-rendered, always visible)
+# Y=30-62:  Luna animation (positioned to clear status area with margin)
+# Y=70-102: Modifiers vertical (4 icons below Luna with margin)
+# Y=110-128: Layer name (at bottom with comfortable space)
 
-# Luna positioned at top since no status widgets
+# Luna positioned with comfortable margin below status
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=0
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=30
 
-# Modifiers positioned below Luna
+# Modifiers positioned with margin below Luna
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=40
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
 
-# Layer with generous space
+# Layer positioned at bottom with comfortable space
 CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=80
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=110
 
-# RIGHT SIDE (Peripheral) Layout - NO STATUS WIDGETS:
-# Y=0-48:  WPM Graph (starts at top, full width)
-# Y=50-92: Cat animation (positioned below graph)
-# Clean display with maximum animation space!
+# RIGHT SIDE (Peripheral) Layout:
+# Y=0-18:  Status widgets (auto-rendered, always visible)
+# Y=30-72: Cat animation (positioned below status with margin)
+# Clean and simple - status + cat only
 
 # Output background - DISABLED for cleaner look
 CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
