--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -128,8 +128,8 @@ CONFIG_NICE_OLED_WIDGET_LAYER=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=30
+# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
+# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=30
 
 # Disable WPM number on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
@@ -139,22 +139,19 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 # ==============================================
 
 # LEFT SIDE (Central) Layout:
-# Y=0-18:   Status widgets (BT/Battery - auto-rendered, always visible)
-# Y=30-62:  Luna animation (positioned to clear status area with margin)
-# Y=70-102: Modifiers vertical (4 icons below Luna with margin)
-# Y=110-128: Layer name (at bottom with comfortable space)
+# JUST COULDN'T GET IT TO WORK
 
-# Luna positioned with comfortable margin below status
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=30
+# # Luna positioned with comfortable margin below status
+# CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
+# CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=36
 
-# Modifiers positioned with margin below Luna
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
+# # Modifiers positioned with margin below Luna
+# CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
+# CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
 
 # Layer positioned at bottom with comfortable space
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=110
+# CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
+# CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=110
 
 # RIGHT SIDE (Peripheral) Layout:
 # Y=0-18:  Status widgets (auto-rendered, always visible)
