--- a/keymap_drawer.config.yaml
+++ b/keymap_drawer.config.yaml
@@ -7,10 +7,11 @@ parse_config:
     td_esc GRAVE: "`"
     td_slash FSLH: "/"
     td_slash BSLH: "\\"
-  
+
   zmk_combos:
     # Display combo for ESC
-    - p: [19, 20]
+    combo_esc:
+      p: [19, 20]
       k: ESC
       l: [BASE]
 
